k8s-resources/tools/sealedsecret-issuer/sealedsecret-issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sealedissuer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealedissuer-deployment
  namespace: sealedissuer
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: sealedissuer-frontend
  template:
    metadata:
      labels:
        app: sealedissuer-frontend
    spec:
      volumes:
        - name: certificate-file
          secret:
            secretName: sealedissuer-certificate
      containers:
        - name: sealedissuer
          image: registry.gitlab.com/genral73/k8s-tools/sealedsecret-issuer:latest
          volumeMounts:
            - name: certificate-file
              mountPath: /kubeseal/cert.pem
              subPath: cert.pem
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.2"
              memory: "50Mi"
            limits:
              cpu: "0.25"
              memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sealedissuer-svc
  namespace: sealedissuer  
spec:
  type: ClusterIP
  selector:
    app: sealedissuer-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: sealedissuer-ingress
  namespace: sealedissuer
spec:
  rules:
    - host: sealedissuer.localhost
      http:
        paths:
          - backend:
              serviceName: sealedissuer-svc
              servicePort: http
            path: /
